@@ -27,7 +27,12 @@ import gobject
 import gst
 from elements.smartscale import SmartVideoScale
 from objectfactory import FileSourceFactory
+from signalgroup import SignalGroup
 from ui import plumber
+import instance
+from sourcelist import SourceList
+from threads import CallbackThread
+import time
 
 class SmartBin(gst.Pipeline):
     """
@@ -526,11 +531,19 @@ class SinkBin:
 
 	self.vsinkthread = gst.Bin('vsinkthread')
 	vqueue = gst.element_factory_make('queue')
+	timeoverlay = gst.element_factory_make('timeoverlay')
 	cspace = gst.element_factory_make('ffmpegcolorspace')
 	vscale = gst.element_factory_make('videoscale')
 	vscale.props.method = 1
-	self.vsinkthread.add(self.videosink, vqueue, vscale, cspace)
-	vqueue.link(self.videosink)
+	self.vsinkthread.add(self.videosink,timeoverlay, vqueue, vscale, cspace)
+	vqueue.link(timeoverlay)
+	timeoverlay.link(self.videosink)
+	timeoverlay.set_property("halign","right")
+	timeoverlay.set_property("valign","bottom")
+	timeoverlay.set_property("deltax",65)
+	timeoverlay.set_property("deltay",20)
+
+
 	cspace.link(vscale)
 	vscale.link(vqueue)
 	self.vsinkthread.videosink = self.videosink
@@ -547,10 +560,13 @@ class SinkBin:
        	self.asinkthread.audiosink = self.audiosink
        	self.asinkthread.add_pad(gst.GhostPad("sink", aconv.get_pad('sink')))
 
-    def connectSink(self,player):
-	player.setVideoSinkThread(self.vsinkthread)
-	player.setAudioSinkThread(self.asinkthread)
-	
+    def connectSink(self,player,is_video,is_audio):
+	if is_video is True :
+		player.setVideoSinkThread(self.vsinkthread)
+	if is_audio is True :
+		player.setAudioSinkThread(self.asinkthread)
+
+
 	gst.debug("success connecting sources to SinkBin")
 
 
@@ -589,20 +605,129 @@ class SmartCaptureBin(SmartBin):
         self.debug("finished connecting sources")
 
 
-  
-class SmartStreamBin(SmartFileBin):
+class SmartCaptureBin(SmartBin):
     """
-    SmartStreamBin with network stream from URI can be used as source.
+    SmartBin derivative for capturing streams.
     """
 
-    def __init__(self, url):
-        gst.log("Creating new smartstreambin")
+    def __init__(self):
+        gst.log("Creating new smartcapturebin")
+        self.videosrc = gst.element_factory_make("v4l2src", "webcam-vsrc")
+        self.audiosrc = gst.element_factory_make("alsasrc", "webcam-asrc")
 
+        SmartBin.__init__(self, "smartcapturebin", has_video=True, has_audio=True,
+                          width=640, height=480)
+
+
+    def _addSource(self):
+	self.q1 = gst.element_factory_make("queue", "webcam-firstvqueue")
+        self.q1.props.max_size_time = 10 * gst.SECOND
+	self.q2 = gst.element_factory_make("queue", "webcam-firstaqueue")
+        self.q2.props.max_size_time = 30 * gst.SECOND
+        self.q2.props.max_size_buffers = 0
+        self.q2.props.max_size_bytes = 0
+        self.add(self.videosrc,self.audiosrc,self.q1,self.q2)
+
+    def _connectSource(self):
+        self.debug("connecting sources")
+        #vcaps = gst.caps_from_string("video/x-raw-yuv,width=320,height=240,framerate=25.0")
+	gst.element_link_many(self.videosrc,self.q1,self.vtee)
+ 	gst.element_link_many(self.audiosrc,self.q2,self.atee)
+
+        #self.videosrc.get_pad("src").link(self.vtee.get_pad("sink"))
+	#self.audiosrc.get_pad("src").link(self.atee.get_pad("sink"))
+
+        self.debug("finished connecting sources")
+
+class Discover:
+    """
+	A Pipeline which return audio/video info about the uri stream
+    """
+
+    def __init__(self,uri):
+
+	self.is_audio = False
+	self.is_video = True
+
+	try:
+
+		self.pipeline = gst.parse_launch(" %s ! decodebin name=dbin ! fakesink" % uri)
+	except:
+		gst.log("Error occured with Disover, StreamBin Detector")
+		return 
+
+	self.dbin = self.pipeline.get_by_name("dbin")
+	self.no = 0
+	self.dbin.connect("new-decoded-pad", self._new_decoded_pad_cb)
+
+	self.pipeline.set_state(gst.STATE_PLAYING)
 	
-	self.factory = FileSourceFactory(url)
-        self.source = self.factory.makeBin()
+	time.sleep(0.1)
+	
+
+    def info(self):
+	CallbackThread(self.kill).start()
+	return (self.is_video,self.is_audio)
+
+    def _new_decoded_pad_cb(self, dbin, pad, is_last):
+
+	# Does the file contain got audio or video ?
+	if "audio" in pad.get_caps().to_string():
+	    	self.is_audio = True
+
+	elif "video" in pad.get_caps().to_string():
+		self.is_video = True
+    def kill(self):
+	time.sleep(1)
+	del self
 
 
-        SmartBin.__init__(self, "smartdefaultbin", has_video=True, has_audio=True)
+class SmartStreamBin(SmartBin):
+    """
+    SmartBin derivative for capturing streams.
+    """
+
+    def __init__(self,uri):
+        gst.log("Creating new smartcapturebin")
+	
+	
+	(self.is_video,self.is_audio) = (True,True)
+	
+
+	self.urisrc = gst.element_make_from_uri(gst.URI_SRC,uri)
+	self.decodebin = gst.element_factory_make("decodebin","decode-smartbin")
+	self.videoq = gst.element_factory_make("queue","video-queue")
+	self.audioq = gst.element_factory_make("queue","audio-queue")
+
+        SmartBin.__init__(self, "smartcapturebin", has_video=self.is_video, has_audio=self.is_audio,
+
+                          width=640, height=480)
+
+
+    def _addSource(self):
+	self.add(self.urisrc,self.decodebin,self.videoq,self.audioq)
+
+    def _connectSource(self):
+        self.debug("connecting sources")
+	gst.element_link_many(self.urisrc,self.decodebin)
+	if self.is_video :
+		gst.element_link_many(self.videoq,self.vtee)
+	if self.is_audio:
+		gst.element_link_many(self.audioq,self.atee)
+
+
+	self.decodebin.connect("new-decoded-pad",self.on_new_decoded_pad)
+
+        self.debug("finished connecting sources")
+
+    # DecodeBin callback
+    def on_new_decoded_pad(self, element, pad, last):
+        caps = pad.get_caps()
+        name = caps[0].get_name()
+        if name.startswith("video"):
+                pad.link(self.videoq.get_pad('sink'))
+
+	elif name.startswith("audio"):
+		pad.link(self.audioq.get_pad('sink'))
 
 
